test/symtabTest/pass/test3.ic
class TestingFields {
	int x;
	
	void main () {
		int x = 2;
		int y = x + 3;
	}
	
}