test/symtabTest/fail/test6.ic
class UndeclaredVar {
	int x;
	
	void badVar () {
		x = y + 2;
	}
}